--- a/public/elements/sps-page-presentation-details.html
+++ b/public/elements/sps-page-presentation-details.html
@@ -413,8 +413,8 @@ Example:
         },
         globalSelection: {
           type: Object,
-          value: {},
-          observer: '_selectionChanged'
+          value: {}/*,
+          observer: '_selectionChanged'*/
         }
       },
       listeners: {
