disable on-paper-responsive-change

--- a/public/elements/sps-app.html
+++ b/public/elements/sps-app.html
@@ -85,7 +85,7 @@ Example:
       }
     </style>
     <iron-ajax auto id="adminStatusAjax" url="../../api/1.0/admin/" handle-as="json" last-response="{{adminStatus}}"></iron-ajax>
-    <paper-drawer-panel id="mainPanel" on-paper-responsive-change="onresp">
+    <paper-drawer-panel id="mainPanel">
       <paper-header-panel drawer class="vertical layout">
         <paper-toolbar>
           <div style="color:#FFFFFF"></div>
