--- a/public/elements/sps-login.html
+++ b/public/elements/sps-login.html
@@ -64,7 +64,7 @@
       <h3>Log In</h3>
       <div class="flex"></div>
     </div>
-    <iron-ajax id="loginAjax" method="POST" handle-as="json" on-request="reqCB" on-response="loginCallback" url="../api/1.0/admin/login"></iron-ajax>
+    <iron-ajax id="loginAjax" method="POST" handle-as="json" on-request="reqCB" content-type="application/json" on-response="loginCallback" url="../api/1.0/admin/login"></iron-ajax>
     <form id="adminlogin">
       <paper-input id="user" name="user" label="Email Address" on-input="loginFieldsCheck" on-keydown="checkForEnter"></paper-input>
       <paper-input id="pass" name="pass" label="Password" on-input="loginFieldsCheck" on-keydown="checkForEnter" type="password"></paper-input>
@@ -138,7 +138,7 @@
         if(details.detail.response != null) {
           if(details.detail.response.status) {
             this.fire('firetoast', { message: "Logged In!"});
-            this.fire('polyquiz-admin-check-status');
+            this.fire('admin-check-status');
           } else if(details.detail.response.status_details != null) { 
             this.fire('firetoast', { message: "Failed To Login! Server Encountered an Error!"});
           } else {
