--- a/public/elements/sps-page-presentations.html
+++ b/public/elements/sps-page-presentations.html
@@ -111,7 +111,7 @@
             <div>{{_trimDate(item.date)}}-<b>{{_computedFromObject(blocks, value, 'block_name')}}</b></div>
           </template>
         </paper-datatable-column>
-        <paper-datatable-column header="Name" property="last_name">
+        <paper-datatable-column header="Name" property="last_name" sortable>
           <template>
             <div>{{item.last_name}}, {{item.first_name}}</div>
           </template>
